...

            ToolbarItem {
                templatesButton
                    .accessibilityElement(children: .ignore)
                    .accessibilityLabel("Templates")
                    .accessibilityAddTraits(.isButton)
                    .accessibilityIdentifier("TemplatesButton")
            }

            ToolbarItem {
                Button {
                    AsyncTask { await loadData() }
                } label: {
...
